--- a/output/team.html
+++ b/output/team.html
@@ -66,6 +66,29 @@
 </div>
 <div class="card employee-card mx-2">
   <div class="card-header">
+    <h2 class="card-title">Steve</h2>
+    <h3 class="card-title"><i class="fas fa-glasses mr-2"></i>Engineer</h3>
+  </div>
+  <div class="card-body">
+    <ul class="list-group">
+      <li class="list-group-item">ID: 3</li>
+      <li class="list-group-item">
+        Email: <a href="mailto:engineer4you@me.com">engineer4you@me.com</a>
+      </li>
+      <li class="list-group-item">
+        GitHub:
+        <a
+          href="https://github.com/DeveloperSteve"
+          target="_blank"
+          rel="noopener noreferrer"
+          >DeveloperSteve</a
+        >
+      </li>
+    </ul>
+  </div>
+</div>
+<div class="card employee-card mx-2">
+  <div class="card-header">
     <h2 class="card-title">Jeff</h2>
     <h3 class="card-title">
       <i class="fas fa-user-graduate mr-2"></i>Intern
